--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,104 @@
     transform: rotate(360deg);
   }
 }
+
+.carousel-item{
+  height: 600px;
+  background: no-repeat scroll center scroll;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.carousel-item::before{
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #000;
+  opacity: 0.7;
+}
+
+.carousel-caption{
+  bottom: 180px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.carousel-caption h5{
+  font-size: 100px;
+  font-weight: 700;
+}
+
+.carousel-caption p{
+  font-size: 18px;
+  font-style: oblique;
+  top: 2rem;
+}
+
+.slider-btn{
+  margin-top: 30px;
+}
+
+.slider-btn .btn{
+  background-color: #e74c3c;
+  color: white;
+  border-radius: 5;
+  padding: 1.5rem 2rem;
+  font-size: 1rem;
+  margin-right: 15px;
+}
+
+.slider-btn .btn:hover{
+  border-color: white;
+  background-color: #e74c3c;
+}
+
+#contact{
+	display: flex;
+	flex-direction: column;
+	box-sizing: border-box;
+	background-color: rgba(0, 0, 0, 0.9);
+	color: rgb(255, 255, 255);
+	padding: 20px;
+  justify-content: center;
+}
+
+#contact h1{
+  text-align: center;
+}
+
+.form{
+	display: flex;
+	flex-direction: column;
+	box-sizing: border-box;
+	align-items: center;
+	margin:  20px 0px;
+}
+
+.input{
+	padding: 12px;
+	margin: 15px;
+	width: 20%;
+}
+
+#msg{
+	width: 30%;
+	padding: 10px;
+	margin: 15px;
+  height: 170px;
+}
+
+#send{
+	padding: 10px;
+	width: 10%;
+	margin: 20px;
+}
+
+#send:hover{
+	cursor: pointer;
+	box-shadow: 0 0 10px rgb(212, 114, 114);
+  background-color: #e74c3c;
+}
